# N3rdNEAT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  N3rdNEAT.make  README.html  README.md  SCsub  connector.cpp  connector.h  neural_network.cpp  neural_network.h  node.cpp  node.h  premake5.lua  register_types.cpp  register_types.h
include/N3rdNEAT/: N3rdNEAT.h  connector.h  neural_network.h  node.h
src/: GodotLibrary.cpp  N3rdNEAT.cpp  connector.cpp  neural_network.cpp  node.cpp
